# f3-nation-data

./: CONTRIBUTING.md  README.md  debug_beatdowns.py  mise.toml  pyproject.toml
.github/workflows/: ci-checks.yaml  manual-weekly-report.yaml
configs/: .coveragerc  tasks.toml
dev_utilities/: README.md  generate_models.py
dev_utilities/templates/: sqlalchemy_model.py.j2
f3_nation_data/: __init__.py  analytics.py  fetch.py  transform.py
f3_nation_data/cli/: weekly_report.py
f3_nation_data/cli/templates/: weekly_report.txt
f3_nation_data/models/: __init__.py  beatdown_record.py
f3_nation_data/models/app/: __init__.py
f3_nation_data/models/parsed/: beatdown.py
f3_nation_data/models/sql/: ao.py  beatdown.py  user.py
f3_nation_data/parsing/: backblast.py
f3_nation_data/utils/: __init__.py  datetime_utils.py
tests/: conftest.py  test_analytics.py  test_database.py  test_datetime_utils.py  test_fetch.py  test_fixtures.py  test_model_generator.py  test_weekly_report_cli.py
tests/fixtures/: beatdowns.json
tests/parsing/: test_content_analysis.py  test_date_extraction.py  test_extract_fng_names.py  test_extract_pax_count.py  test_extract_pax_from_string.py  test_file_extraction.py  test_transformation.py  test_workout_type.py
