[project]
name = "f3-nation-data"
description = "library to extract, parse, and analyze F3 Nation SQL database data"
authors = [{ name = "f3-noho" }]
readme = "README.md"
license = 'MIT'
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    "poethepoet>=0.37.0",
    "tbelt>=0.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch]
build.packages = ["f3_nation_data"]
metadata.allow-direct-references = true

[tool.hatch.version]
path = 'f3_nation_data/version.py'

[tool.poe]
include = ["configs/tasks.toml"]

[tool.ruff]
extend = "configs/ruff.toml"
exclude = [
  "tests/**/fixtures/**",  # Exclude test fixture resources from linting
]

[tool.pyright]
typeCheckingMode = "standard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.toolbelt]
include = ["@toolbelt:resources/presets/hdw.yaml"]
